Style landing page layout

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
               <form class="intro__form">
                 <div class="intro__email-input-container">
                   <input type="email" class="intro__email-input" />
-                  <p class="intro__error-msg">Please enter a valid email</p>
+                  <p class="intro__error-msg">
+                    Please enter a valid email address
+                  </p>
                 </div>
                 <input
                   type="submit"
@@ -75,14 +77,14 @@
                   class="testimonial__icon"
                   src="./images/icon-arrow.svg"
                   alt="icon-arrow"
-                ></img>
+                />
               </a>
               <div class="testimonial__testimonial-container">
-                <i
+                <img
                   class="testimonial__icon"
                   src="./images/icon-quotes.svg"
                   alt="icon-quotes"
-                ></i>
+                />
                 <p class="testimonial__paragraph">
                   Fylo has improved our team productivity by an order of
                   magnitude. Since making the switch our team has become a
@@ -121,16 +123,17 @@
               would be happy to help you.
             </p>
           </div>
-          <div class="cta__form-container">
-            <form class="cta__form">
+          <form class="cta__form">
+            <div class="cta__form-container">
               <input type="email" class="cta__email-input" />
+              <p class="cta__error-msg">Please enter a valid email address</p>
               <input
                 type="submit"
                 value="Get Started For Free"
                 class="cta__submit-input"
               />
-            </form>
-          </div>
+            </div>
+          </form>
         </section>
         <footer class="footer">
           <img src="./images/logo.svg" alt="logo" class="footer__logo" />
@@ -141,7 +144,7 @@
                   class="footer__icon"
                   src="images/icon-phone.svg"
                   alt="icon-phone"
-                ></img>
+                />
                 <p class="footer__text">Phone: +1-543-123-4567</p>
               </div>
               <div class="footer__icon-text-container">
@@ -149,7 +152,7 @@
                   class="footer__icon"
                   src="images/icon-email.svg"
                   alt="icon-email"
-                ></img>
+                />
                 <p class="footer__text">example@fylo.com</p>
               </div>
             </div>
