--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
               <h3 class="testimonial__heading">
                 Stay productive, wherever you are
               </h3>
-              <p class="testimonial__paragraph">
+              <p class="testimonial__paragraph testimonial__paragraph--bold">
                 Never let location be an issue when accessing your files. Fylo
                 has you covered for all of your file storage needs.
               </p>
-              <p class="testimonial__paragraph">
+              <p class="testimonial__paragraph testimonial__paragraph--bold">
                 Securely share files and folders with friends, family and
                 colleagues for live collaboration. No email attachments
                 required!
@@ -93,11 +93,13 @@
               </a>
               <div class="testimonial__testimonial-container">
                 <img
-                  class="testimonial__icon"
+                  class="testimonial__testimonial-icon"
                   src="./images/icon-quotes.svg"
                   alt="icon-quotes"
                 />
-                <p class="testimonial__paragraph">
+                <p
+                  class="testimonial__testimonial-paragraph testimonial__testimonial-paragraph--bold"
+                >
                   Fylo has improved our team productivity by an order of
                   magnitude. Since making the switch our team has become a
                   well-oiled collaboration machine.
