Style cta section

--- a/index.html
+++ b/index.html
@@ -139,8 +139,14 @@
           </div>
           <form class="cta__form">
             <div class="cta__form-container">
-              <input type="email" class="cta__email-input" />
-              <p class="cta__error-msg">Please enter a valid email address</p>
+              <input
+                type="email"
+                class="cta__email-input"
+                placeholder="Enter your email..."
+              />
+              <p class="cta__error-msg cta__error-msg--hidden">
+                Please enter a valid email address
+              </p>
               <input
                 type="submit"
                 value="Get Started For Free"
