Style footer section

--- a/index.html
+++ b/index.html
@@ -177,15 +177,15 @@
               </div>
             </div>
             <div class="footer__column">
-              <p class="footer__text">About Us</p>
-              <p class="footer__text">Jobs</p>
-              <p class="footer__text">Press</p>
-              <p class="footer__text">Blog</p>
+              <p class="footer__text footer__text--link">About Us</p>
+              <p class="footer__text footer__text--link">Jobs</p>
+              <p class="footer__text footer__text--link">Press</p>
+              <p class="footer__text footer__text--link">Blog</p>
             </div>
             <div class="footer__column">
-              <p class="footer__text">Contact Us</p>
-              <p class="footer__text">Terms</p>
-              <p class="footer__text">Privacy</p>
+              <p class="footer__text footer__text--link">Contact Us</p>
+              <p class="footer__text footer__text--link">Terms</p>
+              <p class="footer__text footer__text--link">Privacy</p>
             </div>
             <div class="footer__column">
               <div class="footer__social-media-icons">
