--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                       placeholder="Enter your email..."
                     />
                     <p
-                      id="id-error-msg"
+                      id="intro-error-msg"
                       class="intro__error-msg intro__error-msg--hidden"
                     >
                       Please enter a valid email address
@@ -166,7 +166,7 @@
         <footer class="footer">
           <img src="./images/logo.svg" alt="logo" class="footer__logo" />
           <div class="footer__columns-container">
-            <div class="footer__column">
+            <div id="footer-column-1" class="footer__column">
               <div class="footer__icon-text-container">
                 <img
                   class="footer__icon"
@@ -184,18 +184,18 @@
                 <p class="footer__text">example@fylo.com</p>
               </div>
             </div>
-            <div class="footer__column">
+            <div id="footer-column-2" class="footer__column">
               <p class="footer__text footer__text--link">About Us</p>
               <p class="footer__text footer__text--link">Jobs</p>
               <p class="footer__text footer__text--link">Press</p>
               <p class="footer__text footer__text--link">Blog</p>
             </div>
-            <div class="footer__column">
+            <div id="footer-column-3" class="footer__column">
               <p class="footer__text footer__text--link">Contact Us</p>
               <p class="footer__text footer__text--link">Terms</p>
               <p class="footer__text footer__text--link">Privacy</p>
             </div>
-            <div class="footer__column">
+            <div id="footer-column-4" class="footer__column">
               <div class="footer__social-media-icons">
                 <i
                   class="fa-brands fa-facebook-f footer__social-media-icon"
